--- a/deep1/requirements.txt
+++ b/deep1/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 asttokens==2.4.1
+coverage==7.5.3
 decorator==5.1.1
 Django==4.2.11
 django-debug-toolbar==4.3.0
@@ -7,6 +8,7 @@ django-phonenumber-field==7.3.0
 exceptiongroup==1.2.0
 executing==2.0.1
 ipython==8.22.2
+isort==5.13.2
 jedi==0.19.1
 matplotlib-inline==0.1.6
 parso==0.8.3
@@ -18,6 +20,7 @@ psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
+python-dotenv==1.0.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
